--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 target
+
+# mvn hpi:run
 work
 
 # IntelliJ IDEA project files
@@ -11,7 +13,3 @@ work
 .settings
 .classpath
 .project
-
-# jenv file
-.java-version
-.flattened-pom.xml
